[project]
name = "game-theory-trading-strats"
version = "0.1.0"
description = "Production-grade game-theoretic trading strategies for crypto perpetuals"
authors = [{ name = "Taha" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "hyperliquid-python-sdk",     # ← corregido (sin versión estricta)
]

[project.scripts]
runner = "runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]